Improved Cutting (#613)
* Cleaned up Wmm methods: no implicit construction of predefined relations anymore.

* Major refactor:
 - replaced Definition.Visitor by Constraint.Visitor
 - renamed some Definitions and Axioms

* Added Cut and RefinementModel classes.

* Added various missing names for wmm base definitions

* Enabled cutting of special relations by default.

* Removed RFINV from RelationNameRepository.
Generalized Wmm.removeUnconstrainedRelations

* CAAT/CoreLiterals now directly know their associated predicate/relation (no more matching over names).
CoreReasoner and Refiner also avoid matching over names now.
Deleted now unused helper classes

* Various changes to reduce special-case reasoning.
ExecutionGraph now checks if problematic relations were cut.